# acpl-qwalk

./: .gitignore  .pre-commit-config.yaml  01_train_all.sh  02_eval_all.sh  03_collect_and_bundle.sh  LICENSE  environment.yml  eval_fix_bundle_runner_artifacts.patch  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  testing.py  testingGrad.py
.acpl-cache/317478902887a70b6fac34970cdb3660/: index.json  test.jsonl  val.jsonl
acpl/: __init__.py  types.py
acpl/baselines/: coins.py  policies.py
acpl/configs/: optim.yaml  task=robust.yaml  train.yaml
acpl/data/: features.py  generator.py  graph_factory.py  graphs.py  manifest.py  splits.py
acpl/eval/: __init__.py  ablations.py  dataset_audit.py  embeddings.py  graph_viz.py  masking.py  plots.py  protocol.py  reporting.py  roles.py  stats.py
acpl/objectives/: metrics.py  mixing.py  robust.py  search.py  transfer.py
acpl/policy/: encoder_factory.py  head.py  pe.py  policy.py
acpl/sim/: __init__.py  coins.py  disorder.py  portmap.py  shift.py  step.py  utils.py
acpl/train/: backprop.py  loops.py  ppo.py
acpl/utils/: checkpoint.py  deterministic_segment.py  logging.py  seeding.py  tensor_shapes.py  timers.py
docs/: ACPL_DTQW_PresentationColon.pptx  README.md
eval/_bundle_figs_smoke/: FIGURES.md  bundle_meta.json  manifest.figures.csv  manifest.figures.json
eval/_collected_smoke/: collection_meta.json  results.csv  results.json  results_long.csv  runs.csv
eval/_paper/: FIGURES.md  bundle_meta.json  manifest.figures.csv  manifest.figures.json
eval/expA/: NOTES.template.md  REPORT.md  meta.json
eval/smoke_all_flags/: meta.json
eval/tmp/: meta.json  summary.csv  summary.json
eval/tmp24/: meta.json  summary.csv  summary.json
eval/tmp3/: NOTES.template.md  REPORT.md  meta.json  metrics_long.csv  metrics_wide.csv  summary.csv  summary.json  table.tex
eval/tmp6/: meta.json  summary.csv  summary.json
eval/tmp_smoke/: meta.json
results/figures_bundle/: FIGURES.md  FIGURES.tex  bundle_meta.json  manifest.figures.csv  manifest.figures.json  manifest.figures_print.csv
results/registry/: collection_meta.json  results.csv  results.json  results_long.csv  results_long_print.csv  results_print.csv  runs.csv  runs_print.csv
runs/B_exp_64nodes_64steps_seed42/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/B_su2_64nodes_64steps_seed0/: eval_ci.json  eval_ci.txt  features.json  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/B_su2_64nodes_64steps_seed42/: eval_ci.json  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/B_su2_64nodes_[64, 96, 128]steps_seed0/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/HermitianCointWithHigherDegree_Transferregular_20251022_235325/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/Mark_Node_Search_20251022_232610/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/curr_T16/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/curr_T16_wd/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/curr_T32/: metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/exp1_transfer-line_L64_T63_nll_seed0/: metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/exp1_transfer-line_L64_T63_nll_thetaNoise_seed0/: metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/exp1_transfer-line_L64_T64_exp_lr1e-3/: eval_ci.json  eval_ci.txt  latest.ckpt  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/exp1_transfer-line_L64_T64_lr1e-3/: eval_ci.json  metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/exp1_transfer-line_L64_T64_lr1e-3_11_18_2025/: eval_ci.txt  metrics.jsonl  model_last.pt.meta.json
runs/exp2_transfer-regular_N64_d3_T64_lr1e-3/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_last.pt.meta.json
runs/fast_transfer-line_N64_T64_lr3e-3ForWrittenReport/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_last.pt.meta.json
runs/fast_transfer-regular_N64_d3_T64_lr1e-3AlsoforWrittenReport/: eval_ci.json  eval_ci.txt  metrics.jsonl  model_last.pt.meta.json
runs/phaseB_ER_exp/: model_last.pt
runs/smoke_20251022_164745/: metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/smoke_20251022_170100/: metrics.jsonl  model_best.pt  model_last.pt  model_last.pt.meta.json
runs/smoke_20251022_170818/: eval_ci.json  (+4 more)
scripts/: collect_results.py  eval.py  eval.py.bak  export_coins.py  gen_manifest.py  make_experiment_card.py  make_figures.py  run_mask_sensitivity.py  train.py  viz_coins.py
tests/: conftest.py  test_coin_lifts.py  test_coins_blockdiag_vs_segments.py  test_dataset_determinism.py  test_degree_preserving_ws_grid.py  test_features.py  test_features_errors.py  test_graph_builders_extra.py  test_message_passing_equiv.py  test_partial_trace.py  test_policy_forward.py  test_portmap.py  test_router_group_pin.py  test_shift_unitarity.py  test_splits.py  test_step_gradcheck.py  test_step_op.py  test_step_unitarity.py  test_transfer.py  test_transfer_gradients.py
(+1239 files in other folders)
