[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acpl-qwalk"
version = "0.1.0"
description = "GNN-based Adaptive Coin Policy for Discrete-Time Quantum Walks"
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Angel Colon" }]
dependencies = [
  # Core numerics
  "numpy>=1.26",
  "scipy>=1.11",
  "networkx>=3.2",

  # Torch stack (choose CUDA/CPU wheel outside if you prefer)
  "torch>=2.3",
  # torch-geometric (ops wheels auto-resolve on pip; if not, install ops separately)
  "torch-geometric>=2.5",

  # Config & I/O
  "pyyaml>=6.0.1",
  "hydra-core>=1.3",
  "omegaconf>=2.3",

  # Logging & CLI
  "tqdm>=4.66",
  "tensorboard>=2.14",
  "wandb>=0.17",

  # Dev / tests
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.7",
  "types-PyYAML>=6.0.12.12",
  "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "ruff>=0.5.0",
  "isort>=5.13",
  "pre-commit>=3.7",
  "pyright>=1.1.380",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["acpl*"]

# Ensure typed package marker is included in the wheel/sdist
[tool.setuptools.package-data]
"acpl" = ["py.typed"]

###############################################
# Code style / lint / type-check configuration
###############################################

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
combine_as_imports = true
known_first_party = ["acpl"]
src_paths = ["acpl", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["docs/"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "N", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# In tests, allow long lines, non-lowercase vars, and skip annotation rules
"tests/*" = ["E501", "N806", "ANN"]
# In the training script, we intentionally use short uppercase math symbols (X, T, P, H...)
"scripts/train.py" = ["N806"]

# =========================
# Typing (mypy / pyright)
# =========================

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
strict_equality = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
check_untyped_defs = true
mypy_path = "stubs"

# 3rd-party modules we use with thin or no stubs
[[tool.mypy.overrides]]
module = [
  "tqdm.*",
]
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = "warning"
reportPrivateImportUsage = false
reportUnknownMemberType = "warning"
venvPath = "."
venv = ".venv"
include = ["acpl", "scripts"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
